CSS fixes for visibility

--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -60,78 +60,6 @@ var(--bs-bg-tertiary)
     visibility: hidden;
 }
 
-/* GRADIENTS */
-:root {
-    --gradient-php: linear-gradient(180deg, rgba(120, 124, 181, 0.5), rgba(120, 124, 181, 0.15));
-    --gradient-js: linear-gradient(180deg, rgba(247, 223, 30, 0.5), rgba(247, 223, 30, 0.15));
-    --gradient-sql: linear-gradient(180deg, rgba(0, 117, 143, 0.5), rgba(0, 117, 143, 0.15));
-    --gradient-css-html: linear-gradient(180deg, rgba(38, 77, 228, 0.5), rgba(38, 77, 228, 0.15));
-
-    --gradient-1: linear-gradient(135deg, rgba(255, 154, 158, 1) 0%, rgba(250, 208, 196, 1) 100%);
-    --gradient-2: linear-gradient(135deg, rgba(255, 126, 95, 1) 0%, rgba(254, 180, 123, 1) 100%);
-    --gradient-3: linear-gradient(135deg, rgba(106, 17, 203, 1) 0%, rgba(37, 117, 252, 1) 100%);
-    --gradient-4: linear-gradient(135deg, rgba(0, 198, 255, 1) 0%, rgba(0, 114, 255, 1) 100%);
-    --gradient-5: linear-gradient(135deg, rgba(86, 171, 47, 1) 0%, rgba(168, 224, 99, 1) 100%);
-}
-
-.bg-gradient-php {
-    background: var(--gradient-php);
-}
-
-.bg-gradient-js {
-    background: var(--gradient-js);
-}
-
-.bg-gradient-sql {
-    background: var(--gradient-sql);
-}
-
-.bg-gradient-css-html {
-    background: var(--gradient-css-html);
-}
-
-.bg-gradient-1 {
-    background: var(--gradient-1);
-}
-
-.bg-gradient-2 {
-    background: var(--gradient-2);
-}
-
-.bg-gradient-3 {
-    background: var(--gradient-3);
-}
-
-.bg-gradient-4 {
-    background: var(--gradient-4);
-}
-
-.bg-gradient-5 {
-    background: var(--gradient-5);
-}
-
-.bg-gradient-pink {
-    background: linear-gradient(to right,
-    #ff4d94, /* Vivid Pink */
-    #e6007e, /* Strong Pink */
-    #ff4d94, /* Vivid Pink */
-    #ff66b2, /* Medium Pink */
-    #ff80ab, /* Light Pinkish Purple */
-    #ff66b2, /* Medium Pink */
-    #ff4d94, /* Vivid Pink */
-    #e6007e, /* Strong Pink */
-    #ff4d94, /* Vivid Pink */
-    #ff66b2, /* Medium Pink */
-    #ff80ab, /* Light Pinkish Purple */
-    #ff66b2, /* Medium Pink */
-    #ff4d94, /* Vivid Pink */
-    #e6007e, /* Strong Pink */
-    #ff4d94 /* Vivid Pink */
-    );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
 /* NAVS */
 .nav-link {
     color: var(--bs-emphasis-color);
